--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/jspdf": "^1.3.3",
     "axios": "^1.8.1",
+    "firebase": "^11.4.0",
     "framer-motion": "^11.0.8",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.344.0",
@@ -36,6 +37,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.2.0"
   }
 }
