--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@types/jspdf": "^1.3.3",
     "axios": "^1.8.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "firebase": "^11.4.0",
     "framer-motion": "^11.0.8",
+    "fs": "^0.0.1-security",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.344.0",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
